@@ -10,6 +10,7 @@
   * Add Mixin#build_method_call
   * Make Mixin#super work
   * Mixin#super also checks for a real defined method in parent
+  * Rename Mixin to Object
 
 2009-03-10 - Sean Huber (shuber@huberry.com)
   * Initial commit
